Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -184,7 +184,7 @@ footer {
 		margin: 0;
 		float: none;
 	  	padding: 0 0 50px 0;
-		top: 0px;
+		top: 50px;
 		width: auto;
 		height: auto;
 		border: none;
